--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,7 @@
                    </li>
                       <li class="nav-item active"><a class="nav-link" href="/">Inicio</span></a></li>
                      
+                      <li class="nav-item active"><a class="nav-link" href="documentos/new">Documentos</span></a></li>
                       <li class="nav-item active">
                       <% if user_signed_in? %>
                           <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><strong><%= current_user.email %></strong></a>
