--- a/app/views/documentos/edit.html.erb
+++ b/app/views/documentos/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing documento</h1>
+<div class="container">
+<div class="card mt-5">
+<div class="card-header">
+<ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="">Documento</a></li>
+          <li class="breadcrumb-item active">Editar documento</li>
+        </ol>
+        
+<h4 class="text">Editar documento </h4>
+</div>
+ <div class="probar">
+<br>
+ <%= render "form", documento: @documento %>
 
-<%= render "form", documento: @documento %>
 
 <br>
 
