--- a/app/views/documentos/show.html.erb
+++ b/app/views/documentos/show.html.erb
@@ -1,3 +1,14 @@
+
+<ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="">Documento</a></li>
+          <li class="breadcrumb-item active">documento</li>
+        </ol>
+        
+<h4 class="text">Nuevo documento </h4>
+</div>
+ <div class="probar">
+
+
 <p style="color: green"><%= notice %></p>
 
 <%= render @documento %>
@@ -7,4 +18,5 @@
   <%= link_to "Back to documentos", documentos_path %>
 
   <%= button_to "Destroy this documento", @documento, method: :delete %>
+   
 </div>
