--- a/app/views/documentos/new.html.erb
+++ b/app/views/documentos/new.html.erb
@@ -1,5 +1,15 @@
-<h1>Nuevo documento</h1>
-
+<div class="container">
+<div class="card mt-5">
+<div class="card-header">
+<ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="">Documento</a></li>
+          <li class="breadcrumb-item active">Registrar nuevo documento</li>
+        </ol>
+        
+<h4 class="text">Nuevo documento </h4>
+</div>
+ <div class="probar">
+<br>
 <%= render "form", documento: @documento %>
 
 <br>
