--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,8 +46,17 @@
                   
                    </li>
                       <li class="nav-item active"><a class="nav-link" href="/">Inicio</span></a></li>
-                     
-                      <li class="nav-item active"><a class="nav-link" href="documentos/new">Documentos</span></a></li>
+                   </li>  
+                      <li class="nav-item active">
+                      <a class="nav-link dropdown-toggle"id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" <%= link_to "Documentos ",new_documento_path %></a>
+                     <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                       <a class="dropdown-item" <%= link_to "Ingles", ingles_path %></a>
+                       <a class="dropdown-item" <%= link_to "Financieros", financieros_path %></a>
+                       <a class="dropdown-item" <%= link_to "Dirección", direccion_path %></a>
+                       <a class="dropdown-item" <%= link_to "Servicios escolares", servicios_path %></a>
+                       </div>
+                      </li>
+                      
                       <li class="nav-item active">
                       <% if user_signed_in? %>
                           <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><strong><%= current_user.email %></strong></a>
